Tried fixing horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.container-fluid {
+    padding-left: 0 !important;
+    margin-left: 0 !important;
+}
+
 .vw-100 {
     width: 100vw;
 }
